--- a/Learn-JSF-from-basic-to-database-connectivity-quickly/Section-02-Form-Handling-with-JSF/src/main/webapp/WEB-INF/web.xml
+++ b/Learn-JSF-from-basic-to-database-connectivity-quickly/Section-02-Form-Handling-with-JSF/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,9 @@
                                 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1">
 	<display-name>Section-02-Form-Handling-with-JSF</display-name>
+	<welcome-file-list>
+		<welcome-file>Login.xhtml</welcome-file>
+	</welcome-file-list>
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
