Added the welcome page (Landing page)

--- a/Learn-JSF-from-basic-to-database-connectivity-quickly/Section-05-Integrating-web-template/src/main/webapp/WEB-INF/web.xml
+++ b/Learn-JSF-from-basic-to-database-connectivity-quickly/Section-05-Integrating-web-template/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	id="WebApp_ID" version="3.1">
 	<display-name>Section-05-Integrating-web-template</display-name>
 	<welcome-file-list>
-		<welcome-file>Index.xhtml</welcome-file>
+		<welcome-file>Welcome.xhtml</welcome-file>
 	</welcome-file-list>
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
